@@ -1,3 +1,8 @@
+2004-09-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* libc/stdio/vfscanf.c: fix parsing of multiple
+	float values; fix for bug #10068.
+
 2004-09-20  Theodore A. Roth  <troth@openavr.org>
 
 	* configure.in (AM_INIT_AUTOMAKE): Bump version.
